# neorobrooke-s4

./: .gitattributes  .gitignore  .scrutinizer.yml  API.txt  LICENSE.md  README.md  asetup.cfg  documentation_externe.md  pip_script.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: .codecov.yml
.github/workflows/: tests.yml  tests_cpp.yml  tests_python.yml
CAD/: Template.SLDDRW
CAD/Bobine/: Assemblage bobine - Will.STL  Assemblage bobine.SLDASM  assemblage_bobine.SLDASM  bobine_part1_v2.SLDPRT  bobine_part1_v3.SLDPRT  bobine_part1_v3.STL  bobine_part2_v2.SLDPRT  bobine_part2_v3.SLDPRT  bobine_v1.SLDPRT  bobine_v3.SLDDRW  mise en plan bobine v2.SLDDRW  mise en plan bobine v3.SLDDRW  mise en plan bobine.SLDDRW  mise_en_plan_bobine_v3.SLDDRW
CAD/Electrique/: Schéma_électrique_v1.dwg  Schéma_électrique_v2.dwg  schema_electrique_v2.dwg
CAD/Encodeur/: Axe_long.SLDPRT  Axe_petit.SLDPRT  Compresseur.SLDPRT  Encastrage V2.SLDPRT  Encastrage V3.SLDDRW  Encastrage V3.SLDPRT  Encastrage.SLDPRT  Mécanisme encodeur V2.SLDASM  Mécanisme encodeur V3.SLDASM  Mécanisme encodeur.SLDASM  Piece_test_trou.SLDPRT  Roue_entrainée V1.STL  Roue_entrainée V2.SLDDRW  Roue_entrainée V2.SLDPRT  Roue_entrainée V2.STL  Roue_entrainée.SLDPRT  Roue_entrainée_IN V3.SLDPRT  Roue_entrainée_MID V3.SLDPRT  Roue_entrainée_OUT V3.SLDPRT  Roue_entrainée_out V2.SLDDRW  Roue_entrainée_out V2.SLDPRT  Roue_entrainée_out V2.STL  Roue_lousse V2.SLDPRT  Roue_lousse.SLDPRT  Roue_lousse_IN V3.SLDPRT  Roue_lousse_MID V3.SLDPRT  Roue_lousse_OUT V3.SLDPRT  Selle V1.SLDPRT  Trou V1.SLDDRW  Trou V1.SLDPRT  encastrage_v3.SLDDRW  mecanisme_encodeur_v3.SLDASM  roue_entrainee_out_v2.SLDDRW  roue_entrainee_v2.SLDDRW  roue_entrainee_v2.SLDPRT  trou_v1.SLDDRW
CAD/Nacelle 2D/: mise en plan nacelle 2D.SLDDRW  nacelle_2D.SLDDRW  nacelle_2D.SLDPRT
CAD/Nacelle 3D/: Charge V-test.STL  Charge V1.SLDPRT  Charge V2.SLDPRT  Charge V3.SLDDRW  Charge V5.SLDDRW  Charge V5.SLDPRT  Charge V5.STL  charge_v3.SLDDRW  charge_v3.SLDPRT
Demos/: script_demo_2.py
cad/: Nacelle.SLDPRT
documentation/: API.md  Python_API.md  application_CLI_tests.md  brouillon-API.txt  communication_serie.md  dictionnaireErreur.txt  dictionnaire_erreurs.txt
(+141 files in other folders)
