[metadata]
name = funibot-neorobrooke
version = 2.0.1-alpha
author = Néorobrooke
author_email = warp0901@usherbrooke.ca
description = Permet de contrôler un Funibot
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
url = https://github.com/Neorobrooke/neorobrooke-s4
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: French

[options]
package_dir =
    = Code/API/Python
packages =
    funibot_api
test_suite = tests
py_modules =
    funibot-cli
python_requires = >=3.7
install_requires =
    PyYAML
    ruamel.yaml
    pyserial
    python-benedict
test_requires =
    pytest
    pytest-cov
