[metadata]
name = funibot-neorobrooke
version = 2.0.0-alpha
author = Néorobrooke
author_email = warp0901@usherbrooke.ca
description = Permet de contrôler un Funibot
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
url = https://github.com/Neorobrooke/neorobrooke-s4
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: French

[options]
package_dir =
    = Code/API
packages =
    funibot_api
py_modules =
    funibot_cli
    funibot_scripts
python_requires = >=3.7, <3.10
install_requires =
    PyYAML >= 5.4.1
    ruamel.yaml >= 0.17.2
    pyserial >= 3.5
    python-benedict >= 0.23.2

[options.extras_require]
dev =
    autopep8>=1.5.6
    ipython>=7.22.0
test =
    pytest>=6.2.2
    pytest-cov>=2.11.1

[options.entry_points]
console_scripts =
    funibot-cli = funibot_cli:main
    funibot-init = funibot_scripts:copier_config
    funibot-config = funibot_scripts:ouvrir_config
    funibot-erreurs = funibot_scripts:ouvrir_erreurs
    funibot-doc = funibot_scripts:ouvrir_doc
    funibot-dossier = funibot_scripts:ouvrir_dossier
